improve pandas handling of csv with pyarrow

--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T12:16:46.447956Z",
-     "start_time": "2023-01-15T12:16:45.589525Z"
+     "end_time": "2023-01-15T12:42:09.761089Z",
+     "start_time": "2023-01-15T12:42:08.918577Z"
     }
    },
    "outputs": [],
@@ -47,8 +47,8 @@
    "id": "1741add3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T12:16:46.482812Z",
-     "start_time": "2023-01-15T12:16:46.449139Z"
+     "end_time": "2023-01-15T12:42:09.797477Z",
+     "start_time": "2023-01-15T12:42:09.762410Z"
     }
    },
    "outputs": [],
@@ -239,8 +239,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T12:16:46.554556Z",
-     "start_time": "2023-01-15T12:16:46.483889Z"
+     "end_time": "2023-01-15T12:42:09.870512Z",
+     "start_time": "2023-01-15T12:42:09.799201Z"
     }
    },
    "outputs": [],
@@ -474,8 +474,10 @@
     "            _csv = _dd.read_csv(csv_file)\n",
     "            _usecols = list(_csv.columns)[1:]\n",
     "        elif csv_engine == \"pandas\":\n",
-    "            _usecols = _pd.read_csv(csv_file, index_col=0,\n",
-    "                                    nrows=0).columns.tolist()\n",
+    "            _csv = _pd.read_csv(csv_file,\n",
+    "                                encoding='unicode_escape',\n",
+    "                                engine=\"pyarrow\")\n",
+    "            _usecols = _csv.columns.to_list()[1:]\n",
     "        print(\"Reading variable names from csv file finished.\")\n",
     "    else:\n",
     "        _usecols = _np.array(_usecols)\n",
@@ -489,12 +491,9 @@
     "            _a = _[:, 0]\n",
     "            _b = _[:, 1]\n",
     "        elif csv_engine == \"pandas\":\n",
-    "            _ = _pd.read_csv(csv_file,\n",
-    "                             usecols=__,\n",
-    "                             encoding='unicode_escape',\n",
-    "                             engine=\"pyarrow\").dropna()\n",
-    "            _a = _[_usecols[0]].to_numpy()\n",
-    "            _b = _[_usecols[j + 1]].to_numpy()\n",
+    "            _ = _csv[__].dropna().to_numpy()\n",
+    "            _a = _[:, 0]\n",
+    "            _b = _[:, 1]\n",
     "        MI_csv[j] = MI_binary_continuous(a=_a,\n",
     "                                         b=_b,\n",
     "                                         N=N,\n",
@@ -530,8 +529,10 @@
     "            _csv = _dd.read_csv(csv_file)\n",
     "            _usecols = list(_csv.columns)[1:]\n",
     "        elif csv_engine == \"pandas\":\n",
-    "            _usecols = _pd.read_csv(csv_file, index_col=0,\n",
-    "                                    nrows=0).columns.tolist()\n",
+    "            _csv = _pd.read_csv(csv_file,\n",
+    "                                encoding='unicode_escape',\n",
+    "                                engine=\"pyarrow\")\n",
+    "            _usecols = _csv.columns.to_list()[1:]\n",
     "        print(\"Reading variable names from csv file finished.\")\n",
     "    else:\n",
     "        _usecols = _np.array(_usecols)\n",
@@ -545,12 +546,9 @@
     "            _a = _[:, 0]\n",
     "            _b = _[:, 1]\n",
     "        elif csv_engine == \"pandas\":\n",
-    "            _ = _pd.read_csv(csv_file,\n",
-    "                             usecols=__,\n",
-    "                             encoding='unicode_escape',\n",
-    "                             engine=\"pyarrow\").dropna()\n",
-    "            _a = _[_usecols[0]].to_numpy()\n",
-    "            _b = _[_usecols[j + 1]].to_numpy()\n",
+    "            _ = _csv[__].dropna().to_numpy()\n",
+    "            _a = _[:, 0]\n",
+    "            _b = _[:, 1]\n",
     "        MI_csv[j] = MI_bivariate_continuous(a=_a,\n",
     "                                            b=_b,\n",
     "                                            a_N=a_N,\n",
@@ -596,8 +594,10 @@
     "            _csv = _dd.read_csv(csv_file)\n",
     "            _usecols = list(_csv.columns)[1:]\n",
     "        elif csv_engine == \"pandas\":\n",
-    "            _usecols = _pd.read_csv(csv_file, index_col=0,\n",
-    "                                    nrows=0).columns.tolist()\n",
+    "            _csv = _pd.read_csv(csv_file,\n",
+    "                                encoding='unicode_escape',\n",
+    "                                engine=\"pyarrow\")\n",
+    "            _usecols = _csv.columns.to_list()[1:]\n",
     "        print(\"Reading variable names from csv file finished.\")\n",
     "    else:\n",
     "        _usecols = _np.array(_usecols)\n",
@@ -616,12 +616,9 @@
     "                _a = _[:, 0]\n",
     "                _b = _[:, 1]\n",
     "            elif csv_engine == \"pandas\":\n",
-    "                _ = _pd.read_csv(csv_file,\n",
-    "                                 usecols=__,\n",
-    "                                 encoding='unicode_escape',\n",
-    "                                 engine=\"pyarrow\").dropna()\n",
-    "                _a = _[_usecols[0]].to_numpy()\n",
-    "                _b = _[_usecols[j]].to_numpy()\n",
+    "                _ = _csv[__].dropna().to_numpy()\n",
+    "                _a = _[:, 0]\n",
+    "                _b = _[:, 1]\n",
     "            _MI_slice[k] = MI_binary_continuous(a=_a,\n",
     "                                                b=_b,\n",
     "                                                N=N,\n",
@@ -678,8 +675,10 @@
     "            _csv = _dd.read_csv(csv_file)\n",
     "            _usecols = list(_csv.columns)[1:]\n",
     "        elif csv_engine == \"pandas\":\n",
-    "            _usecols = _pd.read_csv(csv_file, index_col=0,\n",
-    "                                    nrows=0).columns.tolist()\n",
+    "            _csv = _pd.read_csv(csv_file,\n",
+    "                                encoding='unicode_escape',\n",
+    "                                engine=\"pyarrow\")\n",
+    "            _usecols = _csv.columns.to_list()[1:]\n",
     "        print(\"Reading variable names from csv file finished.\")\n",
     "    else:\n",
     "        _usecols = _np.array(_usecols)\n",
@@ -699,12 +698,9 @@
     "                _a = _[:, 0]\n",
     "                _b = _[:, 1]\n",
     "            elif csv_engine == \"pandas\":\n",
-    "                _ = _pd.read_csv(csv_file,\n",
-    "                                 usecols=__,\n",
-    "                                 encoding='unicode_escape',\n",
-    "                                 engine=\"pyarrow\").dropna()\n",
-    "                _a = _[_usecols[0]].to_numpy()\n",
-    "                _b = _[_usecols[j]].to_numpy()\n",
+    "                _ = _csv[__].dropna().to_numpy()\n",
+    "                _a = _[:, 0]\n",
+    "                _b = _[:, 1]\n",
     "            _MI_slice[k] = MI_bivariate_continuous(a=_a,\n",
     "                                                   b=_b,\n",
     "                                                   a_N=a_N,\n",
@@ -757,8 +753,10 @@
     "            _csv = _dd.read_csv(csv_file)\n",
     "            _usecols = list(_csv.columns)[1:]\n",
     "        elif csv_engine == \"pandas\":\n",
-    "            _usecols = _pd.read_csv(csv_file, index_col=0,\n",
-    "                                    nrows=0).columns.tolist()\n",
+    "            _csv = _pd.read_csv(csv_file,\n",
+    "                                encoding='unicode_escape',\n",
+    "                                engine=\"pyarrow\")\n",
+    "            _usecols = _csv.columns.to_list()[1:]\n",
     "        print(\"Reading variable names from csv file finished.\")\n",
     "    else:\n",
     "        _usecols = _np.array(_usecols)\n",
@@ -777,12 +775,9 @@
     "                _a = _[:, 0]\n",
     "                _b = _[:, 1]\n",
     "            elif csv_engine == \"pandas\":\n",
-    "                _ = _pd.read_csv(csv_file,\n",
-    "                                 usecols=__,\n",
-    "                                 encoding='unicode_escape',\n",
-    "                                 engine=\"pyarrow\").dropna()\n",
-    "                _a = _[_usecols[0]].to_numpy()\n",
-    "                _b = _[_usecols[j]].to_numpy()\n",
+    "                _ = _csv[__].dropna().to_numpy()\n",
+    "                _a = _[:, 0]\n",
+    "                _b = _[:, 1]\n",
     "            # returned Pearson correlation is a symmetric matrix\n",
     "            _pearson_slice[k] = _np.corrcoef(_a, _b)[0, 1]\n",
     "            k += 1\n",
@@ -805,8 +800,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T12:17:00.921324Z",
-     "start_time": "2023-01-15T12:16:46.556302Z"
+     "end_time": "2023-01-15T12:42:24.608209Z",
+     "start_time": "2023-01-15T12:42:09.871485Z"
     }
    },
    "outputs": [
@@ -814,8 +809,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "two independant generalized Bern. r.v. realisations has MI estimate of  0.003811958620012941\n",
-      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0020285344668618975\n",
+      "two independant generalized Bern. r.v. realisations has MI estimate of  0.004707466187896756\n",
+      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0020286030451749236\n",
       "MI estimate between a,a and a,b:  0.11484453582991859 0.0018942218780961517\n"
      ]
     }
@@ -852,8 +847,8 @@
    "id": "6b189ee8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T12:17:07.534456Z",
-     "start_time": "2023-01-15T12:17:00.922593Z"
+     "end_time": "2023-01-15T12:42:31.314488Z",
+     "start_time": "2023-01-15T12:42:24.609485Z"
     }
    },
    "outputs": [
@@ -910,8 +905,8 @@
    "id": "fb2875be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T12:17:13.438995Z",
-     "start_time": "2023-01-15T12:17:07.536081Z"
+     "end_time": "2023-01-15T12:42:37.035398Z",
+     "start_time": "2023-01-15T12:42:31.315555Z"
     }
    },
    "outputs": [
@@ -966,8 +961,8 @@
    "id": "0764c527",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T12:17:13.442640Z",
-     "start_time": "2023-01-15T12:17:13.440127Z"
+     "end_time": "2023-01-15T12:42:37.040208Z",
+     "start_time": "2023-01-15T12:42:37.037002Z"
     }
    },
    "outputs": [],
@@ -1029,8 +1024,8 @@
    "id": "6fbd58c1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T12:17:13.469868Z",
-     "start_time": "2023-01-15T12:17:13.443610Z"
+     "end_time": "2023-01-15T12:42:37.060957Z",
+     "start_time": "2023-01-15T12:42:37.041367Z"
     }
    },
    "outputs": [],
@@ -1049,8 +1044,8 @@
    "id": "177a3dfc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T12:17:25.407720Z",
-     "start_time": "2023-01-15T12:17:13.470857Z"
+     "end_time": "2023-01-15T12:42:43.647920Z",
+     "start_time": "2023-01-15T12:42:37.062638Z"
     }
    },
    "outputs": [
@@ -1091,8 +1086,8 @@
    "id": "03a42999",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T12:17:25.412733Z",
-     "start_time": "2023-01-15T12:17:25.409908Z"
+     "end_time": "2023-01-15T12:42:43.650841Z",
+     "start_time": "2023-01-15T12:42:43.649054Z"
     }
    },
    "outputs": [],
@@ -1111,8 +1106,8 @@
    "id": "9634a110",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T12:17:39.139322Z",
-     "start_time": "2023-01-15T12:17:25.414419Z"
+     "end_time": "2023-01-15T12:42:46.626891Z",
+     "start_time": "2023-01-15T12:42:43.651813Z"
     }
    },
    "outputs": [
@@ -1147,7 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64dfe39a",
+   "id": "39e97fd8",
    "metadata": {},
    "outputs": [],
    "source": []
