--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T17:40:51.211623Z",
-     "start_time": "2023-01-15T17:40:50.361658Z"
+     "end_time": "2023-01-15T18:00:31.668248Z",
+     "start_time": "2023-01-15T18:00:30.792263Z"
     }
    },
    "outputs": [],
@@ -47,8 +47,8 @@
    "id": "1741add3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T17:40:51.246386Z",
-     "start_time": "2023-01-15T17:40:51.212715Z"
+     "end_time": "2023-01-15T18:00:31.707782Z",
+     "start_time": "2023-01-15T18:00:31.669881Z"
     }
    },
    "outputs": [],
@@ -239,8 +239,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T17:40:51.313880Z",
-     "start_time": "2023-01-15T17:40:51.247938Z"
+     "end_time": "2023-01-15T18:00:31.779162Z",
+     "start_time": "2023-01-15T18:00:31.709481Z"
     }
    },
    "outputs": [],
@@ -450,6 +450,9 @@
     "\n",
     "\n",
     "def _read_csv(csv_file, _usecols, csv_engine, parquet_file):\n",
+    "    \"\"\"\n",
+    "    Read a csv file using differnet engines. Use dask to read csv if low in memory.\n",
+    "    \"\"\"\n",
     "    assert csv_engine == \"dask\" or csv_engine == \"pyarrow\" or csv_engine == \"fastparquet\", \"Only dask and pandas pyarrow or fastparquet are supported to read csv files.\"\n",
     "    if _np.array(_usecols).size == 0:\n",
     "        print(\n",
@@ -483,6 +486,9 @@
     "\n",
     "\n",
     "def _read_two_columns(_csv, __, csv_engine):\n",
+    "    \"\"\"\n",
+    "    Read two columns from a dataframe object, remove NaN. Use dask to read csv if low in memory.\n",
+    "    \"\"\"\n",
     "    if csv_engine == \"dask\":\n",
     "        _ = _np.asarray(_csv[__].dropna().compute())\n",
     "        _a = _[:, 0]\n",
@@ -755,8 +761,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T17:41:05.661714Z",
-     "start_time": "2023-01-15T17:40:51.314886Z"
+     "end_time": "2023-01-15T18:00:47.597360Z",
+     "start_time": "2023-01-15T18:00:31.780197Z"
     }
    },
    "outputs": [
@@ -764,8 +770,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "two independant generalized Bern. r.v. realisations has MI estimate of  0.003471262738644655\n",
-      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.001614806154125944\n",
+      "two independant generalized Bern. r.v. realisations has MI estimate of  0.00426121906888515\n",
+      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0020963047986338637\n",
       "MI estimate between a,a and a,b:  0.11484453582991859 0.0018942218780961517\n"
      ]
     }
@@ -802,8 +808,8 @@
    "id": "6b189ee8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T17:41:12.308150Z",
-     "start_time": "2023-01-15T17:41:05.663193Z"
+     "end_time": "2023-01-15T18:00:54.572134Z",
+     "start_time": "2023-01-15T18:00:47.598495Z"
     }
    },
    "outputs": [
@@ -860,8 +866,8 @@
    "id": "fb2875be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T17:41:18.252051Z",
-     "start_time": "2023-01-15T17:41:12.309521Z"
+     "end_time": "2023-01-15T18:01:00.470190Z",
+     "start_time": "2023-01-15T18:00:54.574704Z"
     }
    },
    "outputs": [
@@ -916,8 +922,8 @@
    "id": "0764c527",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T17:41:18.255575Z",
-     "start_time": "2023-01-15T17:41:18.253228Z"
+     "end_time": "2023-01-15T18:01:00.473789Z",
+     "start_time": "2023-01-15T18:01:00.471357Z"
     }
    },
    "outputs": [],
@@ -979,8 +985,8 @@
    "id": "6fbd58c1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T17:41:18.279975Z",
-     "start_time": "2023-01-15T17:41:18.256605Z"
+     "end_time": "2023-01-15T18:01:00.499980Z",
+     "start_time": "2023-01-15T18:01:00.474953Z"
     }
    },
    "outputs": [],
@@ -999,8 +1005,8 @@
    "id": "177a3dfc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T17:41:23.152847Z",
-     "start_time": "2023-01-15T17:41:18.281614Z"
+     "end_time": "2023-01-15T18:01:05.243007Z",
+     "start_time": "2023-01-15T18:01:00.501712Z"
     }
    },
    "outputs": [
@@ -1041,8 +1047,8 @@
    "id": "03a42999",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T17:41:23.156170Z",
-     "start_time": "2023-01-15T17:41:23.154113Z"
+     "end_time": "2023-01-15T18:01:05.246181Z",
+     "start_time": "2023-01-15T18:01:05.244310Z"
     }
    },
    "outputs": [],
@@ -1061,8 +1067,8 @@
    "id": "9634a110",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T17:41:25.036479Z",
-     "start_time": "2023-01-15T17:41:23.157158Z"
+     "end_time": "2023-01-15T18:01:07.165851Z",
+     "start_time": "2023-01-15T18:01:05.247398Z"
     }
    },
    "outputs": [
