--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T18:00:31.668248Z",
-     "start_time": "2023-01-15T18:00:30.792263Z"
+     "end_time": "2023-01-15T18:06:03.697365Z",
+     "start_time": "2023-01-15T18:06:02.803432Z"
     }
    },
    "outputs": [],
@@ -47,8 +47,8 @@
    "id": "1741add3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T18:00:31.707782Z",
-     "start_time": "2023-01-15T18:00:31.669881Z"
+     "end_time": "2023-01-15T18:06:03.734379Z",
+     "start_time": "2023-01-15T18:06:03.698651Z"
     }
    },
    "outputs": [],
@@ -239,14 +239,14 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T18:00:31.779162Z",
-     "start_time": "2023-01-15T18:00:31.709481Z"
+     "end_time": "2023-01-15T18:06:03.805981Z",
+     "start_time": "2023-01-15T18:06:03.736235Z"
     }
    },
    "outputs": [],
    "source": [
     "# outcome_iid should be a  list of strings for identifiers\n",
-    "#@_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
+    "# @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "def continuous_filter_plink(bed_file,\n",
     "                            bim_file,\n",
     "                            fam_file,\n",
@@ -289,7 +289,7 @@
     "    return MI_UKBB\n",
     "\n",
     "\n",
-    "#@_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
+    "# @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "def binary_filter_plink(bed_file,\n",
     "                        bim_file,\n",
     "                        fam_file,\n",
@@ -323,7 +323,7 @@
     "    return MI_UKBB\n",
     "\n",
     "\n",
-    "#@_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
+    "# @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "def continuous_filter_plink_parallel(bed_file,\n",
     "                                     bim_file,\n",
     "                                     fam_file,\n",
@@ -389,7 +389,7 @@
     "    return MI_UKBB\n",
     "\n",
     "\n",
-    "#@_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
+    "# @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "def binary_filter_plink_parallel(bed_file,\n",
     "                                 bim_file,\n",
     "                                 fam_file,\n",
@@ -449,6 +449,7 @@
     "    return MI_UKBB\n",
     "\n",
     "\n",
+    "@_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "def _read_csv(csv_file, _usecols, csv_engine, parquet_file):\n",
     "    \"\"\"\n",
     "    Read a csv file using differnet engines. Use dask to read csv if low in memory.\n",
@@ -485,6 +486,7 @@
     "    return _csv, _usecols\n",
     "\n",
     "\n",
+    "@_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "def _read_two_columns(_csv, __, csv_engine):\n",
     "    \"\"\"\n",
     "    Read two columns from a dataframe object, remove NaN. Use dask to read csv if low in memory.\n",
@@ -500,7 +502,7 @@
     "    return _a, _b\n",
     "\n",
     "\n",
-    "#@_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
+    "# @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "def binary_filter_csv(csv_file,\n",
     "                      _usecols=[],\n",
     "                      N=500,\n",
@@ -536,7 +538,7 @@
     "    return MI_csv\n",
     "\n",
     "\n",
-    "#@_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
+    "# @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "def continuous_filter_csv(csv_file,\n",
     "                          _usecols=[],\n",
     "                          a_N=300,\n",
@@ -576,7 +578,7 @@
     "    return MI_csv\n",
     "\n",
     "\n",
-    "#@_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
+    "# @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "def binary_filter_csv_parallel(csv_file,\n",
     "                               _usecols=[],\n",
     "                               N=500,\n",
@@ -637,7 +639,7 @@
     "    return MI_csv\n",
     "\n",
     "\n",
-    "#@_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
+    "# @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "def continuous_filter_csv_parallel(csv_file,\n",
     "                                   _usecols=[],\n",
     "                                   a_N=300,\n",
@@ -702,7 +704,7 @@
     "    return MI_csv\n",
     "\n",
     "\n",
-    "#@_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
+    "# @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "def Pearson_filter_csv_parallel(csv_file,\n",
     "                                _usecols=[],\n",
     "                                core_num=\"NOT DECLARED\",\n",
@@ -761,8 +763,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T18:00:47.597360Z",
-     "start_time": "2023-01-15T18:00:31.780197Z"
+     "end_time": "2023-01-15T18:06:18.229709Z",
+     "start_time": "2023-01-15T18:06:03.807047Z"
     }
    },
    "outputs": [
@@ -770,8 +772,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "two independant generalized Bern. r.v. realisations has MI estimate of  0.00426121906888515\n",
-      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0020963047986338637\n",
+      "two independant generalized Bern. r.v. realisations has MI estimate of  0.008907269166633577\n",
+      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.001977226548834286\n",
       "MI estimate between a,a and a,b:  0.11484453582991859 0.0018942218780961517\n"
      ]
     }
@@ -808,8 +810,8 @@
    "id": "6b189ee8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T18:00:54.572134Z",
-     "start_time": "2023-01-15T18:00:47.598495Z"
+     "end_time": "2023-01-15T18:06:24.959543Z",
+     "start_time": "2023-01-15T18:06:18.231203Z"
     }
    },
    "outputs": [
@@ -866,8 +868,8 @@
    "id": "fb2875be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T18:01:00.470190Z",
-     "start_time": "2023-01-15T18:00:54.574704Z"
+     "end_time": "2023-01-15T18:06:30.959745Z",
+     "start_time": "2023-01-15T18:06:24.960929Z"
     }
    },
    "outputs": [
@@ -922,8 +924,8 @@
    "id": "0764c527",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T18:01:00.473789Z",
-     "start_time": "2023-01-15T18:01:00.471357Z"
+     "end_time": "2023-01-15T18:06:30.963848Z",
+     "start_time": "2023-01-15T18:06:30.961315Z"
     }
    },
    "outputs": [],
@@ -985,8 +987,8 @@
    "id": "6fbd58c1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T18:01:00.499980Z",
-     "start_time": "2023-01-15T18:01:00.474953Z"
+     "end_time": "2023-01-15T18:06:30.972799Z",
+     "start_time": "2023-01-15T18:06:30.965295Z"
     }
    },
    "outputs": [],
@@ -1005,8 +1007,8 @@
    "id": "177a3dfc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T18:01:05.243007Z",
-     "start_time": "2023-01-15T18:01:00.501712Z"
+     "end_time": "2023-01-15T18:06:36.576212Z",
+     "start_time": "2023-01-15T18:06:30.975025Z"
     }
    },
    "outputs": [
@@ -1047,8 +1049,8 @@
    "id": "03a42999",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T18:01:05.246181Z",
-     "start_time": "2023-01-15T18:01:05.244310Z"
+     "end_time": "2023-01-15T18:06:36.579541Z",
+     "start_time": "2023-01-15T18:06:36.577617Z"
     }
    },
    "outputs": [],
@@ -1067,8 +1069,8 @@
    "id": "9634a110",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T18:01:07.165851Z",
-     "start_time": "2023-01-15T18:01:05.247398Z"
+     "end_time": "2023-01-15T18:06:38.649008Z",
+     "start_time": "2023-01-15T18:06:36.580634Z"
     }
    },
    "outputs": [
@@ -1103,13 +1105,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a89c49d8",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-01-15T13:04:53.761091Z",
-     "start_time": "2023-01-15T13:04:53.751733Z"
-    }
-   },
+   "id": "bca5549d",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
